--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,41 @@
 </head>
 <body>
   <app-root></app-root>
+
+
+  <!-- css -->
+  <link href="assets/css/bootstrap.css" rel='stylesheet' type='text/css' />
+  <link href="assets/css/style.css" rel='stylesheet' type='text/css' />
+  <link href="assets/css/animate.min.css" rel="stylesheet">
+  <!-- scripts -->
+<!--  <script type="applijewelleryion/x-javascript">-->
+<!--    addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }-->
+<!--  </script>-->
+  <script src="assets/js/jquery-1.11.1.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="assets/js/move-top.js"></script>
+  <script type="text/javascript" src="assets/js/easing.js"></script>
+<!--  <script type="text/javascript">-->
+<!--    jQuery(document).ready(function($) {-->
+<!--      $(".scroll").click(function(event){-->
+<!--        event.preventDefault();-->
+<!--        $('html,body').animate({scrollTop:$(this.hash).offset().top},1200);-->
+<!--      });-->
+<!--    });-->
+<!--  </script>-->
+<!--  <script type="text/javascript">-->
+<!--    $(document).ready(function() {-->
+
+<!--      $().UItoTop({ easingType: 'easeOutQuart' });-->
+<!--    });-->
+<!--  </script>-->
+
+<!--  &lt;!&ndash; animation-effect &ndash;&gt;-->
+<!--  <script src="assets/js/wow.min.js"></script>-->
+<!--  <script>-->
+<!--    new WOW().init();-->
+<!--  </script>-->
+
+
 </body>
 </html>
